# obs-studio

UI/: window-basic-main.cpp  window-basic-main.hpp
UI/forms/: OBSBasic.ui
plugins/image-source/: CMakeLists.txt  image-source.c  multiple-image-source.c  multiple-image-source.h  obs-slideshow.c
